<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Signup">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/nameId"
        android:hint="@string/enter_your_full_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/cityId"
        android:hint="@string/enter_your_city"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/countryId"
        android:hint="@string/enter_your_country"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/phoneId"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/emailSignupId"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/passwordSignupId"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_gravity="center"
        android:id="@+id/registerBtn"
        android:layout_marginTop="32dp"/>

</LinearLayout>